# celestial_classification

./: .gitignore  pyproject.toml  readme.md  readme.txt  requirements.txt
notebooks/: Explaratory analysis.ipynb  Initial baselines.ipynb
src/celestial_classification/: config.py  dataset.py  models.py
